Add stack container graph
