# src/Weaver.Docker.WebApi/Models/ComposeListItemModel.cs
@@ -1,12 +1,10 @@
-using Weaver.Extensions;
-
 namespace Weaver.Docker.WebApi.Models;
 
-public record struct ComposeModel(
+public record struct ComposeListItemModel(
     string Id,
     string Name,
     Health Health,
     Status Status,
-    List<ContainerListItemModel> Containers,
+    List<string> ContainerNames,
     List<PortMapping> Ports
 );
