# src/Weaver.WebApp/packages/docker/src/api/models/index.ts
@@ -8,7 +8,8 @@
 export * from './bind-options';
 export * from './bind-options-propagation';
 export * from './cluster-options';
-export * from './compose-model';
+export * from './compose-detail-model';
+export * from './compose-list-item-model';
 export * from './container-detail-model';
 export * from './container-list-item-model';
 export * from './container-list-item-model-compose-name';
